# GlycoForge

./: .gitignore  README.md  app.py  benchmarking_batch_effect_removal.ipynb  debug_bio_injection_comparison.ipynb  pyproject.toml  requirements.txt  run_simulation.ipynb
.github/workflows/: python-publish.yml  tests.yml
glycoforge/: __init__.py  metrics.py  pipeline.py  pipeline_unified.py  plot.py  sim_batch_factor.py  sim_bio_factor.py  sim_circadian.py  sim_coupled.py  utils.py
sample_config/: hybrid_mode_config.yaml  simlified_mode_config.yaml
tests/: test_core_functions.py
use_cases/: glycoforge_analyses.ipynb
use_cases/batch_correction/: README.md  __init__.py  correction.py  evaluation.py  methods.py  run_correction.ipynb  visualization.py
