[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glycoforge"
version = "0.1.0"
description = "A simulation tool for generating glycomic relative abundance datasets with customizable biological group differences and controllable batch-effect injection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Zoe (Siyu) Hu", email = "zoe.sy.hu@gmail.com"}]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "glycowork>=1.6.4",
]

[project.urls]
Homepage = "https://github.com/BojarLab/GlycoForge"
Repository = "https://github.com/BojarLab/GlycoForge"